# roundhouse-rs

./: .cz.toml  Cargo.toml  LICENSE  README.markdown
.githooks/: commit-msg
.github/workflows/: ci.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/catalog/src/brands/: brand.rs  brand_id.rs  brand_status.rs  brand_type.rs  mod.rs
crates/catalog/src/catalog_items/: catalog_item.rs  catalog_item_id.rs  category.rs  control.rs  delivery_date.rs  epoch.rs  item_number.rs  length_over_buffer.rs  mod.rs  power_method.rs  rolling_stock.rs  rolling_stock_id.rs  service_level.rs  tech_specs.rs
crates/catalog/src/railways/: mod.rs  period_of_activity.rs  railway.rs  railway_gauge.rs  railway_id.rs  railway_length.rs  railway_ownership.rs
crates/catalog/src/scales/: mod.rs  ratio.rs  scale.rs  scale_gauge.rs  scale_id.rs  standard.rs
crates/common/: Cargo.toml
crates/common/src/: address.rs  length.rs  lib.rs  measure_units.rs  metadata.rs  slug.rs  socials.rs
crates/common/src/contact/: mail_address.rs  mod.rs  phone_number.rs  website_url.rs
dataset/brands/: ACME.yml  amintiri_feroviare.yml  arnold_hornby.yml  athearn.yml  bachmann.yml  bemo.yml  brawa.yml  electrotren_hornby.yml  fleischmann.yml  fulgurex.yml  gutzold.yml  heljan.yml  heris.yml  hobbytrain.yml  hornby.yml  jagerndorfer.yml  jouef_hornby.yml  kato.yml  kato_lemke.yml  lenz.yml  lgb.yml  liliput.yml  lima.yml  lima_models.yml  ls_models.yml  maerklin.yml  mehano.yml  oskar.yml  piko.yml  pirata.yml  ree_models.yml  rivarossi.yml  rivarossi_hornby.yml  roco.yml  sudexpress.yml  tillig.yml  trix.yml  vitrains.yml
dataset/catalog_items/ACME/diesel_locomotives/: 60060.yml  60061.yml  60065.yml  60066.yml  60067.yml  60068.yml  60250.yml  60251.yml  60252.yml  60253.yml  60254.yml  60257.yml  60258.yml  60259.yml  60342.yml  60345.yml  60350.yml  60351.yml  60355.yml  60355S.yml  60357.yml  69061.yml  69257.yml  69345.yml  70047.yml  90153.yml
dataset/catalog_items/ACME/electric_locomotives/: 43613.1.yml  43613.yml  60010.yml  60011.yml  60012.yml  60013.yml  60020.yml  60021.yml  60022.yml  60023.yml  60030.yml  60031.yml  60032.yml  60036.yml  60037.yml  60040.yml  60041.yml  60042.yml  60045.yml  60046.yml  60049.yml  60080.yml  60081.yml  60082.yml  60083.yml  60084.yml  60085.yml  60086.yml  60087.yml  60088.yml  60089.yml  60100.yml  60101.yml  60102.yml  60103.yml  60105.yml  60106.yml  60108.yml  60109.yml  60120.yml  (+147 more)
dataset/catalog_items/ACME/electric_multiple_units/: 70001.yml  70002.yml  70010.yml  70011.yml  70012.yml  70013.yml  70014.yml  70015.yml  70016.yml  70017.yml  70018.yml  70020.yml  70021.yml  70022.yml  70023.yml  70024.yml  70025.yml  70050.yml  70051.yml  70052.yml  70060.yml  70061.yml  70062.yml  70063.yml  70064.yml  70065.yml  70066.yml  70067.yml  70068.yml  70069.yml  70070.yml  70071.yml  70072.yml  70100.yml  70101.yml  70102.yml  70103.yml  70104.yml  70105.yml  70106.yml  (+12 more)
dataset/catalog_items/ACME/steam_locomotives/: 60500.yml  60501.yml  60502.yml  60503.yml  60504.yml  60505.yml  60510.yml  69501.yml  69502.yml  69503.yml
dataset/catalog_items/ATM/diesel_locomotives/: 01.yml  02.yml  03.yml  04.yml  05.yml  06.yml  07.yml  08.yml  09.yml  10.yml  11.yml  12.yml  13.yml  14.yml  (+2 more)
dataset/railways/: CD.yml  DB.yml  DSB.yml  FS.yml  OBB.yml  RHB.yml  SBB_CFF_FFS.yml  SNCB.yml  SNCF.yml
dataset/scales/: 0.yml  1.yml  H0.yml  H0e.yml  H0m.yml  N.yml  Ne.yml  Nm.yml  TT.yml  Z.yml
(+1013 files in other folders)
