[workspace]
members = [
    "crates/common",
    "crates/catalog",
]

[workspace.package]
version = "0.1.0"
authors = ["Carlo Micieli"]
description = "A short description of my package"

[workspace.dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
isocountry = "0.3.2"
itertools = "0.10.5"
pretty_assertions = "1.3.0"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
slug = "0.1.4"
thiserror = "1.0.37"
url = "2.3.1"
