[workspace]
members = [
    "crates/common",
    "crates/catalog",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CarloMicieli <piovarolo@gmail.com>"]
license = "MIT"
rust-version = "1.64"

[workspace.dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
isocountry = "0.3.2"
itertools = "0.10.5"
pretty_assertions = "1.3.0"
rust_decimal = { version = "1.26.1", features = ["serde-float"] }
rust_decimal_macros = "1.26.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
slug = "0.1.4"
thiserror = "1.0.37"
url = "2.3.1"
uuid = { version = "1.2.1", features = ["serde", "v4"] }