[package]
name = "catalog"
version = "0.1.0"
edition = "2021"
authors = ["CarloMicieli <piovarolo@gmail.com>"]
license = "MIT"
rust-version = "1.64"

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
chrono = { workspace = true }
isocountry = { workspace = true }
itertools = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
